Refactor app structure and update authentication settings
- Updated `AppShell.xaml` to use `MainView` instead of `MainPage`.
- Increased `AndroidMinSdkVersion` and changed `ApplicationId` in `BaseAppWithAuthorization.csproj`.
- Added iOS-specific code signing parameters and a new target for updating MSAL Client ID.
- Removed `MainPage.xaml` and `MainPage.xaml.cs`, introducing `MainView` and its ViewModel.
- Updated `AndroidManifest.xml` and related files to reflect new MSAL scheme.
- Enhanced `appicon.svg` for higher resolution and added new elements.
- Updated `appsettings.json` for new Azure AD B2C configuration and added caching options.
- Introduced `LoginBranding CSS.css` for custom styling and improved project documentation in `Readme.md`.
- Added `Entitlements.plist` for iOS keychain access.

--- a/BaseAppWithAuthorization/AppShell.xaml
+++ b/BaseAppWithAuthorization/AppShell.xaml
@@ -3,12 +3,12 @@
     x:Class="BaseAppWithAuthorization.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:BaseAppWithAuthorization"
+    xmlns:local="clr-namespace:BaseAppWithAuthorization.Views"
     Title="BaseAppWithAuthorization">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate local:MainView}"
         Route="MainPage" />
 
 </Shell>
